# FreshmenPracticumC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.c
core/: Config.c  Config.h  Database.c  Database.h  TableTest.h
data/: DataManager.c  DataManager.h  Serializer.c  Serializer.h  TableConfig.h  TableGuest.h  TableMountings.c  TableMountings.h  TableOrder.h  TableProvider.h  TablePurchaseRecord.h  TableSellingRecord.h
model/: Consultation.c  Consultation.h  Forecase.c  Forecase.h  Gift.c  Gift.h  Insert.c  Insert.h  Modify.c  Modify.h  Statistics.c  Statistics.h
test/: CMakeLists.txt  TableTest.h  TestData.c  TestDataBase.c  TestDatabase.c  TestForecase.c  TestGift.c  TestInsert.c  TestModify.c  TestQuery.c  TestSerializer.c  TestStat.c  TestUtil.c
test/inputs/: TestSerializer.json
test/inputs/test_database/: Config.json  Guest.json  Mountings.json  Order.json  Provider.json  PurchaseRecord.json  SellingRecord.json
ui/: Menu.c  Menu.h  Table.c  Table.h  UI.c  UI.h  UI_Utils.c  UI_Utils.h
ui/scene/: About.c  About.h  AppendOrder.c  AppendOrder.h  BRguest.c  BRguest.h  BRmountings.c  BRmountings.h  BRmountingsin.c  BRmountingsin.h  BRmountingsout.c  BRmountingsout.h  BRseller.c  BRseller.h  BRtime.c  BRtime.h  Browsing.c  Browsing.h  ChooseGuest.c  ChooseGuest.h  ChooseMountingsType.c  ChooseMountingsType.h  Inventory.c  Inventory.h  Items.c  Items.h  MIguest.c  MIguest.h  MImountings.c  MImountings.h  MIorder.c  MIorder.h  MIprovider.c  MIprovider.h  MIpurchase.c  MIpurchase.h  MIselling.c  MIselling.h  MassIncrease.c  MassIncrease.h  (+22 more)
util/: FileUtil.c  FileUtil.h  StringUtil.c  StringUtil.h  Time.c  Time.h
